--- a/hello/hello.html
+++ b/hello/hello.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my page</h1>
+    <h1 style="color:blue;">Welcome to my page</h1>
     <h2>Hello</h2>
     hello world
 </body>
